--- a/views/dashboard/cards/BasicInfoCard.jade
+++ b/views/dashboard/cards/BasicInfoCard.jade
@@ -34,7 +34,7 @@
                     input#selectFile(type='file', name='profile', style='display: none')
                     input#selectFileSubmit(type='submit', style='display: none')
             .profile
-                p= userProfile.long_desc
+                p= userProfile.short_desc
     .item
         .row
             .meta.meta-keywords
