--- a/views/payment/payment.jade
+++ b/views/payment/payment.jade
@@ -151,9 +151,9 @@ title ST-#{formatName(user.first_name, user.last_name, user.title)} | Payment fo
                         .form-group
                             input.btn.btn-primary.btn.btn-block(type='submit', value='CREATE ACCOUNT')
                     .form-group
-                        a.btn.btn-facebook.btn-block(href=CallFlowUrls.facebookLogin()) Login with Facebook
+                        a.btn.btn-facebook.btn-block(href=PaymentUrls.facebookLogin()) Login with Facebook
                     .form-group
-                        a.btn.btn-linkedin.btn-block(href=CallFlowUrls.linkedInLogin()) Login with LinkedIn
+                        a.btn.btn-linkedin.btn-block(href=PaymentUrls.linkedInLogin()) Login with LinkedIn
                     span.pull-right
                         a#login-link.register(href='javascript:void(0)') Login
                         a#register-link.login(href='javascript:void(0)') Register
