--- a/views/memberRegistration/authorize.jade
+++ b/views/memberRegistration/authorize.jade
@@ -9,8 +9,9 @@ include ../header
             .content.col-xs-9.col-sm-9.col-md-6.col-lg-6
                 .card
                     .item
-                        p By registering as an expert for #{integration.title}, you also agree to <a href='#'>SearchNTalk.com Terms and Conditions</a>
-                        p You will receive requests for scheduling phone calls from people who are seeking your expert advice.
+                        p By registering as an #{formatRole(member.role)} for #{integration.title}, you also agree to <a href='#'>SearchNTalk.com Terms and Conditions</a>
+                        if formatRole(member.role) == 'Expert'
+                            p You will receive requests for scheduling phone calls from people who are seeking your expert advice.
                     .item
                         form(action=MemberRegistrationUrls.authorizationDecision(), method="post")
                             input(name="transaction_id", type="hidden", value="#{transactionID}")
