Removed passport-local and connect-ensure-login in favour of custom authdelegate which supports ajax

--- a/views/dashboard/login.jade
+++ b/views/dashboard/login.jade
@@ -9,10 +9,10 @@ title SearchNTalk - Login
                 form#login-form(role='form', method='post')
                     .form-group
                         label.control-label(for='username') Email
-                        input.form-control#username(type='text', placeholder='Email', name='username', data-toggle="tooltip", data-placement="bottom")
+                        input.form-control#username(type='email', placeholder='Email', name='email')
                     .form-group
                         label.control-label(for='password') Password
-                        input.form-control#password(type='password', name='password', placeholder='Password', data-toggle="tooltip", data-placement="bottom")
+                        input.form-control#password(type='password', name='password', placeholder='Password')
                     .form-group
                         //label.checkbox
                         //    input(type='checkbox')
