--- a/views/memberRegistration/login.jade
+++ b/views/memberRegistration/login.jade
@@ -27,10 +27,10 @@ include ../header
                             form#login-form(role='form', method='POST')
                                 .form-group
                                     label(for='username') Email
-                                    input.form-control#username(name='username', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email)
+                                    input.form-control#username(name='email', type='email', value=member.user.email)
                                 .form-group
                                     label(for='login_password') Password
-                                    input.form-control#login_password(name='password', type='password', data-toggle="tooltip", data-placement="bottom")
+                                    input.form-control#login_password(name='password', type='password')
                                 .form-group
                                     .controls
                                         input.btn-primary.btn.btn-block(value='Login', type='submit')
