--- a/views/memberRegistration/register.jade
+++ b/views/memberRegistration/register.jade
@@ -1,4 +1,7 @@
 title SearchNTalk | Member Registration | Create Account
+- member = member || {};
+- member.user = member.user || {};
+- integration = integration || {};
 include ../header
 .matter
     .container
@@ -7,7 +10,7 @@ include ../header
                 .row
                     .col-md-6
                         .user-profile
-                            .info
+                            //.info
                                 .user-displayname You've been invited to the expert panel of #{integration.title}
                             .hidden-xs.profile
                                 p Please begin by creating an account on searchntalk.com
@@ -28,19 +31,19 @@ include ../header
                                 form#registration-form(method='POST')
                                     .form-group
                                         label(for='email') Email
-                                        input.form-control(name='email', type='email', data-toggle="tooltip", data-placement="bottom", value=member.user.email, autocomplete='off')
+                                        input.form-control(name='email', type='email', value=member.user.email, autocomplete='off')
                                     .form-group
                                         label(for='first_name') First Name
-                                        input.form-control(name='first_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.first_name, autocomplete='off')
+                                        input.form-control(name='first_name', type='text', value=member.user.first_name, autocomplete='off')
                                     .form-group
                                         label(for='last_name') Last Name
-                                        input.form-control(name='last_name', type='text', data-toggle="tooltip", data-placement="bottom", value=member.user.last_name, autocomplete='off')
+                                        input.form-control(name='last_name', type='text', value=member.user.last_name, autocomplete='off')
                                     .form-group
                                         label(for='password') Password
-                                        input.form-control(type='password', name='password', data-toggle="tooltip", data-placement="bottom", autocomplete='off')
+                                        input.form-control(type='password', name='password', autocomplete='off')
                                     .form-group
                                         label(for='confirm_password') Confirm Password
-                                        input.form-control(type='password', name='confirm_password', data-toggle="tooltip", data-placement="bottom", autocomplete='off')
+                                        input.form-control(type='password', name='confirm_password', autocomplete='off')
                                     .form-group
                                         label(for='timezone') Timezone
                                         select.form-control(name='timezone')
